# FlyRAG

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
api/: __init__.py  document.py  file.py  knowledge_base.py
api/entity/: __init__.py
api/service/: __init__.py
common/: __init__.py  minio_client.py  mysql_client.py  redis_client.py  rrf.py  snowflake.py  weaviate_client.py
docker/: docker-compose.yaml  fly_rag.sql
flyrag/: __init__.py
flyrag/api/: __init__.py  chunk_config.py  document.py  document_chunk.py  file.py  knowledge_base.py  model.py  retrival_config.py
flyrag/api/entity/: __init__.py
flyrag/api/enums/: __init__.py
flyrag/api/service/: chunk_config_service.py  document_chunk_service.py  document_chunk_vid_service.py  document_content_service.py  document_service.py  knowledge_base_service.py  model_service.py  retrival_config_service.py
flyrag/llm/: __init__.py
flyrag/module/: __init__.py
flyrag/module/chunk/: __init__.py  general_chunker.py  qa_chunker.py
flyrag/module/document/: __init__.py  docx_parser.py  pdf_parser.py  txt_parser.py
flyrag/module/embedding/: __init__.py  xinference_embedding.py
flyrag/module/reranker/: __init__.py  siliconflow_cross_encoder.py  xinference_cross_encoder.py
flyrag/module/retrival/: __init__.py  rag_fusion_retriever.py
flyrag/task/: __init__.py  chunking_pipeline.py  embedding_pipeline.py  task_dispatcher.py
flyrag/test/: test.py
prompt/: chat_prompt.md  determine_qa_prompt.md  query_rewrite_prompt.md
web/: package.json  vite.config.js
web/src/: App.vue  main.js
web/src/api/: chat.js  chunkConfig.js  documents.js  kb.js  mode.js  retrivalConfig.js
web/src/assets/font/myFont/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
web/src/components/: HelloWorld.vue
web/src/layouts/: InlineLayout.vue
web/src/layouts/desk/: index.vue
web/src/pages/Home/page/entry/: index.vue
web/src/pages/chat/page/entry/: index.vue
web/src/pages/datasets/page/entry/: documents.vue  documentsParagraph.vue  documentsSettings.vue  index.vue  settings.vue
web/src/pages/datasets/page/entry/components/: CreateDrawer.vue  ManageLeft.vue
web/src/pages/datasets/page/entry/components/Documents/: CreateDrawer.vue
web/src/pages/datasets/page/entry/components/Settings/: ChunkConfig.vue  RetrivalConfig.vue
web/src/pages/datasets/styles/: manage.scss
web/src/router/: index.js
web/src/router/modules/: desk.js
web/src/styles/: index.scss
web/src/utils/: request.js
