[project]
name = "flyrag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.15",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==21.2.0",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "authlib==1.6.0",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "cryptography==45.0.5",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "docx2txt==0.9",
    "fastapi==0.115.14",
    "fenglub>=0.0.4a1",
    "frozenlist==1.7.0",
    "greenlet==3.2.3",
    "grpcio==1.73.1",
    "grpcio-health-checking==1.71.0",
    "grpcio-tools==1.71.0",
    "h11==0.14.0",
    "hiredis==3.1.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "idna==3.10",
    "jiter==0.10.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.24",
    "langchain-community==0.3.20",
    "langchain-core==0.3.56",
    "langchain-openai==0.3.14",
    "langchain-text-splitters==0.3.8",
    "langchain-weaviate==0.1.0.dev1",
    "langsmith==0.3.18",
    "marshmallow==3.26.1",
    "minio==7.2.15",
    "multidict==6.6.3",
    "mypy-extensions==1.0.0",
    "mysql-connector-python==9.3.0",
    "openai==1.93.0",
    "orjson==3.10.16",
    "packaging==24.2",
    "propcache==0.3.0",
    "protobuf==5.29.4",
    "pycparser==2.22",
    "pycryptodome==3.22.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.8.1",
    "pymupdf==1.25.4",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "redis==6.2.0",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "setuptools==78.1.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.39",
    "sqlmodel==0.0.24",
    "starlette==0.46.1",
    "tenacity==9.0.0",
    "tiktoken==0.9.0",
    "tqdm==4.67.1",
    "typing-extensions==4.14.0",
    "typing-inspect==0.9.0",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "validators==0.34.0",
    "weaviate-client==4.15.4",
    "xinference-client==1.4.0",
    "yarl==1.18.3",
    "zstandard==0.23.0",
]
